# spleeter-standalone

./: README.md  auto-py-to-exe.json  main.py  pyproject.toml
