[tool.poetry]
name = "media-recode"
version = "1.0"
description = ""
authors = ["irfanykywz <irfanyouth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.2"
auto-py-to-exe = "^2.44.2"
tensorflow = "^2.5.0, <2.10.0"
tensorflow-io-gcs-filesystem = "0.27.0"
spleeter = "^2.4.0"
numpy = "<2"
gevent = "23.9.1"
ffmpeg-python = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
